Fixing broken overflow hidden on tweet column

--- a/content/static/css/blog.css
+++ b/content/static/css/blog.css
@@ -76,6 +76,7 @@ li.tweet.first {
 
 div.panel.twitter .panel-body li.small p {
   margin-bottom: 0;
+  overflow: hidden;
 }
 
 div.panel.twitter .panel-body li.small p.smaller {
